--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -147,7 +147,8 @@
                                 <execution>
                                     <id>default-testCompile</id>
                                     <configuration>
-                                          <release>11</release>
+                                        <source>1.8</source>
+                                        <target>1.8</target>
                                     </configuration>
                                 </execution>
                           </executions>
