--- a/pom.xml
+++ b/pom.xml
@@ -139,8 +139,8 @@
         <jakarta.annotation.version>1.3.4</jakarta.annotation.version>
         <jakarta.json.version>1.1.5</jakarta.json.version>
         <glassfish.json.version>1.1.5</glassfish.json.version>
-        <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
-        <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jaxb-runtime.version>2.3.1</jaxb-runtime.version>
         <java.net.username>${user.name}</java.net.username>
         <hibernate-validator.version>6.0.10.Final</hibernate-validator.version>
         <hibernate-validator.version.upperbound>7</hibernate-validator.version.upperbound>
@@ -162,7 +162,7 @@
         <javax-inject.version>1</javax-inject.version>
         <slf4j.version>1.7.21</slf4j.version>
         <org.jboss.logging.version>3.3.1.Final</org.jboss.logging.version>
-        <jersey.version>2.27</jersey.version>
+        <jersey.version>2.28</jersey.version>
         <grizzly.version>2.3.25</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jakarta.servlet.version>4.0.2</jakarta.servlet.version>
@@ -218,7 +218,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>11</release>
+                     <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -561,7 +562,7 @@
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
                 <artifactId>osgi-resource-locator</artifactId>
-                <version>2.5.0-b42</version>
+                <version>1.0.3</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.ant</groupId>
@@ -955,6 +956,6 @@
             <properties>
                 <javadoc.options>-Xdoclint:none</javadoc.options>
             </properties>
-        </profile>
+        </profile> 
     </profiles>
 </project>
