--- a/hk2-core/pom.xml
+++ b/hk2-core/pom.xml
@@ -54,7 +54,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-enableassertions --add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
+                    <argLine>-XX:+IgnoreUnrecognizedVMOptions -enableassertions --add-exports="java.base/jdk.internal.loader=ALL-UNNAMED"</argLine>
                 </configuration>
             </plugin>
         </plugins>
