--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,8 @@
         <guice.version>4.1.0</guice.version>
         <hk2.mvn.plugins.version>2.5.0-SNAPSHOT</hk2.mvn.plugins.version>
         <protobuf.version>3.5.1</protobuf.version>
+        
+        <legal.doc.source>${maven.multiModuleProjectDirectory}/</legal.doc.source>     
 
         <findbugs.exclude />
         <findbugs.threshold>High</findbugs.threshold>
@@ -294,6 +296,31 @@
                                     <message>You need Maven ${mvn.version} or above!</message>
                                 </requireMavenVersion>
                             </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-legal-resource</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>add-resource</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>${legal.doc.source}</directory>
+                                    <includes>
+                                        <include>NOTICE.md</include>
+                                        <include>LICENSE.md</include>
+                                    </includes>
+                                    <targetPath>META-INF</targetPath>
+                                </resource>
+                            </resources>
                         </configuration>
                     </execution>
                 </executions>
