--- a/osgi/adapter-tests/osgi-adapter-test/pom.xml
+++ b/osgi/adapter-tests/osgi-adapter-test/pom.xml
@@ -48,6 +48,7 @@
                 <configuration>
                     <systemPropertyVariables>
                         <project.version>${project.version}</project.version>
+                        <asm.version>${asm.version}</asm.version>
                         <org.ops4j.pax.url.mvn.localRepository>${settings.localRepository}</org.ops4j.pax.url.mvn.localRepository>
                     </systemPropertyVariables>
                 </configuration>
