--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -55,6 +55,7 @@
                        cache in order to increase code coverage
                     -->
                     <argLine>-Dlocal.repo=${settings.localRepository} -Dbuild.dir=${project.build.directory} -Djava.security.manager -Djava.security.policy=${project.build.directory}/test-classes/policy.txt -Dorg.jvnet.hk2.properties.useSoftReference=false ${surefireArgLineExtra}</argLine>
+                    <trimStackTrace>false</trimStackTrace>
                     <!-- -Djava.security.debug=access,failure,domain -->
                 </configuration>
             </plugin>
