--- a/hk2-testing/ant/pom.xml
+++ b/hk2-testing/ant/pom.xml
@@ -71,7 +71,7 @@
                   <dependency>
                       <groupId>org.glassfish.hk2</groupId>
                       <artifactId>hk2-inhabitant-generator</artifactId>
-                      <version>${hk2.mvn.plugins.version}</version>
+                      <version>${project.version}</version>
                   </dependency>
                 </dependencies>
             </plugin>
