--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,6 @@
         <classmate.version>1.3.3</classmate.version>
         <springcontext.version>4.3.16.RELEASE</springcontext.version>
         <guice.version>4.2.1</guice.version>
-        <hk2.mvn.plugins.version>2.6.0-SNAPSHOT</hk2.mvn.plugins.version>
         <protobuf.version>3.5.1</protobuf.version>
         
         <legal.doc.source>${maven.multiModuleProjectDirectory}/</legal.doc.source>     
@@ -401,7 +400,7 @@
                 <plugin>
                     <groupId>org.glassfish.hk2</groupId>
                     <artifactId>hk2-inhabitant-generator</artifactId>
-                    <version>${hk2.mvn.plugins.version}</version>
+                    <version>${project.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -416,7 +415,7 @@
                 <plugin>
                     <groupId>org.glassfish.hk2</groupId>
                     <artifactId>osgiversion-maven-plugin</artifactId>
-                    <version>${hk2.mvn.plugins.version}</version>
+                    <version>${project.version}</version>
                     <executions>
                         <execution>
                             <id>compute-osgi-version</id>
