--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -27,7 +27,7 @@
     </parent>
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>hk2-bom</artifactId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.6.1</version>
     <packaging>pom</packaging>
 
     <name>HK2 Bom Pom</name>
