--- a/hk2-configuration/hk2-integration/pom.xml
+++ b/hk2-configuration/hk2-integration/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-configuration</artifactId>
-        <version>2.6.0-SNAPSHOT</version>
+        <version>2.6.1</version>
     </parent>
 
     <artifactId>hk2-configuration-integration</artifactId>
