--- a/examples/caching/system/pom.xml
+++ b/examples/caching/system/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>caching-aop-example</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>caching-aop-example-system</artifactId>
