--- a/examples/configuration/webserver/pom.xml
+++ b/examples/configuration/webserver/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>configuration-examples</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>webserver-configuration-example</artifactId>
