--- a/examples/events/threaded/pom.xml
+++ b/examples/events/threaded/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>event-examples</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>threading-event-example</artifactId>
