--- a/examples/operations/pom.xml
+++ b/examples/operations/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>examples</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.1-SNAPSHOT</version>
     </parent>
     <artifactId>operations-example</artifactId>
     <name>Operations Example</name>
