--- a/hk2-utils/pom.xml
+++ b/hk2-utils/pom.xml
@@ -2,6 +2,7 @@
 <!--
 
     Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2019 Payara Services Ltd.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -42,6 +43,7 @@
                     <archive>
                         <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
                         <manifestEntries>
+                            <Automatic-Module-Name>org.glassfish.hk2.utilities</Automatic-Module-Name>
                             <service>foo</service>
                         </manifestEntries>
                     </archive>
