--- a/maven-plugins/hk2-inhabitant-generator/pom.xml
+++ b/maven-plugins/hk2-inhabitant-generator/pom.xml
@@ -2,6 +2,7 @@
 <!--
 
     Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2019 Payara Services Ltd.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -91,6 +92,11 @@
                          </goals>
                          <phase>process-test-classes</phase>
                          <configuration>
+                             <archive>
+                                 <manifestEntries>
+                                     <Automatic-Module-Name>org.glassfish.hk2.maven.generator</Automatic-Module-Name>
+                                 </manifestEntries>
+                             </archive>
                              <excludes>
                                  <exclude>**/negative/*</exclude>
                              </excludes>
