--- a/hk2-testing/jersey/jersey-guice/pom.xml
+++ b/hk2-testing/jersey/jersey-guice/pom.xml
@@ -32,6 +32,7 @@
     <name>HK2 Jersey Guice Tests</name> 
 
     <modules>
-        <module>form-param</module>
+        <!-- To be ininstated once Jersey is updated-->
+        <!-- <module>form-param</module> -->
     </modules>
 </project>
