--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2,6 +2,7 @@
 <!--
 
     Copyright (c) 2013, 2020 Oracle and/or its affiliates. All rights reserved.
+    COpyright (c) 2020 Payara Services Ltd.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -32,6 +33,11 @@
 
     <name>HK2 Bom Pom</name>
     <description>Bom Pom for importing HK2 managed dependencies</description>
+    
+    <properties>
+        <asm.version>8.0.1</asm.version>
+        <jakarta-inject.version>2.0.0-RC3</jakarta-inject.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
