--- a/pom.xml
+++ b/pom.xml
@@ -137,17 +137,17 @@
         <jdk.version>1.8.0</jdk.version>
         <mvn.version>3.0.3</mvn.version>
 
-        <jakarta.annotation.version>2.0.0-RC1</jakarta.annotation.version>
-        <jakarta.json.version>2.0.0-RC2</jakarta.json.version>
-        <glassfish.json.version>2.0.0-RC2</glassfish.json.version>
-        <jaxb-api.version>3.0.0-RC3</jaxb-api.version>
-        <jaxb-runtime.version>3.0.0-M3</jaxb-runtime.version>
+        <jakarta.annotation.version>2.0.0</jakarta.annotation.version>
+        <jakarta.json.version>2.0.0</jakarta.json.version>
+        <glassfish.json.version>2.0.0</glassfish.json.version>
+        <jaxb-api.version>3.0.0</jaxb-api.version>
+        <jaxb-runtime.version>3.0.0-M5</jaxb-runtime.version>
         <java.net.username>${user.name}</java.net.username>
-        <jakarta.enterprise.cdi-api.version>3.0.0-M3</jakarta.enterprise.cdi-api.version>
-        <hibernate-validator.version>7.0.0.Alpha2</hibernate-validator.version>
-        <jakarta.validation.version>3.0.0-M1</jakarta.validation.version>
-        <glassfish.jakarta.el.version>4.0.0-RC1</glassfish.jakarta.el.version>
-        <jakarta.el.version>4.0.0-RC1</jakarta.el.version>
+        <jakarta.enterprise.cdi-api.version>3.0.0</jakarta.enterprise.cdi-api.version>
+        <hibernate-validator.version>7.0.0.Alpha6</hibernate-validator.version>
+        <jakarta.validation.version>3.0.0</jakarta.validation.version>
+        <glassfish.jakarta.el.version>4.0.0</glassfish.jakarta.el.version>
+        <jakarta.el.version>4.0.0</jakarta.el.version>
         <jtype.version>0.1.3</jtype.version>
         <javassist.version>3.22.0-CR2</javassist.version>
         <junit.version>4.13</junit.version>
@@ -161,11 +161,11 @@
         <jakarta-inject.version>2.0.0</jakarta-inject.version>
         <slf4j.version>1.7.30</slf4j.version>
         <org.jboss.logging.version>3.4.1.Final</org.jboss.logging.version>
-        <jersey.version>3.0.0-M6</jersey.version>
+        <jersey.version>3.0.0-RC2</jersey.version>
         <grizzly.version>3.0.0-M1</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <jakarta.servlet.version>5.0.0-M1</jakarta.servlet.version>
-        <jakarta.ws.rs.version>3.0.0-M1</jakarta.ws.rs.version>
+        <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
+        <jakarta.ws.rs.version>3.0.0</jakarta.ws.rs.version>
         <classmate.version>1.5.1</classmate.version>
         <springcontext.version>5.2.4.RELEASE</springcontext.version>
         <guice.version>4.2.2</guice.version>
