--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -36,7 +36,7 @@
     
     <properties>
         <asm.version>8.0.1</asm.version>
-        <jakarta-inject.version>2.0.0-RC3</jakarta-inject.version>
+        <jakarta-inject.version>2.0.0</jakarta-inject.version>
     </properties>
 
     <dependencyManagement>
