--- a/pom.xml
+++ b/pom.xml
@@ -141,15 +141,15 @@
         <jakarta.json.version>2.0.0</jakarta.json.version>
         <glassfish.json.version>2.0.0</glassfish.json.version>
         <jaxb-api.version>3.0.0</jaxb-api.version>
-        <jaxb-runtime.version>3.0.0-M5</jaxb-runtime.version>
+        <jaxb-runtime.version>3.0.0</jaxb-runtime.version>
         <java.net.username>${user.name}</java.net.username>
         <jakarta.enterprise.cdi-api.version>3.0.0</jakarta.enterprise.cdi-api.version>
-        <hibernate-validator.version>7.0.0.Alpha6</hibernate-validator.version>
+        <hibernate-validator.version>7.0.0.Final</hibernate-validator.version>
         <jakarta.validation.version>3.0.0</jakarta.validation.version>
         <glassfish.jakarta.el.version>4.0.0</glassfish.jakarta.el.version>
         <jakarta.el.version>4.0.0</jakarta.el.version>
         <jtype.version>0.1.3</jtype.version>
-        <javassist.version>3.22.0-CR2</javassist.version>
+        <javassist.version>3.27.0-GA</javassist.version>
         <junit.version>4.13.1</junit.version>
         <asm.version>7.3.1</asm.version>
         <woodstox.version>4.1.2</woodstox.version>
@@ -161,8 +161,8 @@
         <jakarta-inject.version>2.0.0</jakarta-inject.version>
         <slf4j.version>1.7.30</slf4j.version>
         <org.jboss.logging.version>3.4.1.Final</org.jboss.logging.version>
-        <jersey.version>3.0.0-RC2</jersey.version>
-        <grizzly.version>3.0.0-M1</grizzly.version>
+        <jersey.version>3.0.0</jersey.version>
+        <grizzly.version>3.0.0</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
         <jakarta.ws.rs.version>3.0.0</jakarta.ws.rs.version>
